--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,8 @@
                 <li class="item"><a href=""><img src="./images/portfolio/technocryak.jpg" width="370px" height="294px"
                             alt="Технокряк">
                         <div class="item-border-container">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                                distinctio eius nobis
                                 tempora
                                 vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium
                                 quasi
