--- a/portfolio.html
+++ b/portfolio.html
@@ -55,20 +55,19 @@
             </ul>
 
             <ul class="portfolio list">
-                <li class="item"><a href=""><img src="./images/portfolio/technocryak.jpg" width="370px" height="294px"
-                            alt="Технокряк">
+                <li class="item">
+                    <a class="link" href="">
+                        <img src="./images/portfolio/technocryak.jpg" width="370px" height="294px" alt="Технокряк">
                         <div class="item-border-container">
                             <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
-                                distinctio eius nobis
-                                tempora
-                                vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium
-                                quasi
-                                ea,
-                                eos quo. Debitis.</p>
+                                distinctio eius nobis tempora eum aperiam odit hic exercitationem fugit odio non
+                                ducimus, expedita praesentium
+                                quasi ea, eos quo. Debitis.</p>
                             <p class="title">Технокряк</p>
                             <p class="portfolio-item-text">Веб-сайт</p>
                         </div>
-                    </a></li>
+                    </a>
+                </li>
                 <li class="item"><a href=""><img src="./images/portfolio/poster-new-orlean.jpg" width="370px"
                             height="294px" alt="Постер New Orlean vs Golden Star">
                         <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
