--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
             <p class="our-team-section-title">Игорь Демьяненко</p>
             <p class="our-team-item-text">Product Designer</p>
             <ul class="social-list list">
-              <li class="social-item"><a class="link instagram" href="" aria-label="Instagram"></a></li>
+              <li class="social-item">
+                <a class="link instagram" href="" aria-label="Instagram"></a>
+              </li>
+
               <li class="social-item"><a class="link twitter" href="" aria-label="Twitter"></a></li>
               <li class="social-item"><a class="link facebook" href="" aria-label="Facebook"></a></li>
               <li class="social-item"><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
