--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
         </ul>
       </nav>
 
+      <svg>
+        <use></use>
+      </svg>
 
       <ul class="header-contacts list">
-        <li class="item envelope"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="item envelope"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
         <li class="item phone"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </div>
