--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         </ul>
       </nav>
 
-      <svg>
-        <use></use>
-      </svg>
-
       <ul class="header-contacts list">
-        <li class="item envelope"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <li class="item envelope"><a class="link" href="mailto:info@devstudio.com">
+            <svg class="icon" width="80" height="80">
+              <use href="./images/sprite.svg#icon-phone"></use>
+            </svg>
+            info@devstudio.com</a>
         </li>
         <li class="item phone"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
@@ -176,7 +176,9 @@
         <h2 class="section-title">Постоянные клиенты</h2>
 
         <ul class="customers list">
-          <li class="item ya-co"></li>
+          <li class="item ya-n-co"><svg width="80" height="80">
+              <use href="./images/sprite.svg#icon-ya-n-co"></use>
+            </svg></li>
           <li class="item company-tagline-here"></li>
           <li class="item company"></li>
           <li class="item foster-peters"></li>
