--- a/index.html
+++ b/index.html
@@ -37,13 +37,18 @@
       </nav>
 
       <ul class="header-contacts list">
-        <li class="item envelope"><a class="link" href="mailto:info@devstudio.com">
-            <svg class="icon" width="80" height="80">
-              <use href="./images/sprite.svg#icon-phone"></use>
+        <li class="item">
+          <a class="link" href="mailto:info@devstudio.com">
+            <svg class="icon" width="16" height="12">
+              <use href="./images/sprite.svg#icon-envelope"></use>
             </svg>
             info@devstudio.com</a>
         </li>
-        <li class="item phone"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+
+        <li class="item"><a class="link" href="tel:+380961111111">
+            <svg class="icon" width="10" height="16">
+              <use href="./images/sprite.svg#icon-phone"></use>
+            </svg>+38 096 111 11 11</a></li>
       </ul>
     </div>
   </header>
@@ -67,28 +72,33 @@
         <!-- Особенности -->
         <h2 class="hidden section-title">Особенности</h2>
         <ul class="features list">
-          <li class="item antenna">
+          <li class="item">
+            <div class="features-image-container">
+              <svg class="features-image" width="65.32" height="70">
+                <use href="./images/sprite.svg#antenna-icon"></use>
+              </svg>
+            </div>
             <h3 class="title">Внимание к деталям</h3>
             <p class="features-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li class="item clock">
+          <li class="item">
             <h3 class="title">Пунктуальность</h3>
             <p class="features-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li class="item diagram">
+          <li class="item">
             <h3 class="title">Планирование</h3>
             <p class="features-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li class="item astronaut">
+          <li class="item">
             <h3 class="title">Современные технологии</h3>
             <p class="features-text">
               Значимость этих проблем настолько очевидна, что реализация
