--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <li class="item">
             <div class="features-image-container">
               <svg class="features-image" width="65.32" height="70">
-                <use href="./images/sprite.svg#antenna-icon"></use>
+                <use href="./images/sprite.svg#icon-antenna"></use>
               </svg>
             </div>
             <h3 class="title">Внимание к деталям</h3>
@@ -85,6 +85,11 @@
             </p>
           </li>
           <li class="item">
+            <div class="features-image-container">
+              <svg class="features-image" width="66.96" height="70">
+                <use href="./images/sprite.svg#icon-clock"></use>
+              </svg>
+            </div>
             <h3 class="title">Пунктуальность</h3>
             <p class="features-text">
               Задача организации, в особенности же рамки и место обучения кадров
@@ -92,6 +97,19 @@
             </p>
           </li>
           <li class="item">
+
+
+
+            <div class="features-image-container">
+              <svg class="features-image" width="70" height="70">
+                <use class="icon-diagram" href="./images/sprite.svg#icon-diagram"></use>
+              </svg>
+            </div>
+
+
+
+
+
             <h3 class="title">Планирование</h3>
             <p class="features-text">
               Равным образом консультация с широким активом в значительной
@@ -99,6 +117,11 @@
             </p>
           </li>
           <li class="item">
+            <div class="features-image-container">
+              <svg class="features-image" width="70" height="70">
+                <use href="./images/sprite.svg#icon-astronaut"></use>
+              </svg>
+            </div>
             <h3 class="title">Современные технологии</h3>
             <p class="features-text">
               Значимость этих проблем настолько очевидна, что реализация
@@ -133,7 +156,11 @@
             <p class="our-team-item-text">Product Designer</p>
             <ul class="social-list list">
               <li class="social-item">
-                <a class="link instagram" href="" aria-label="Instagram"></a>
+                <a class="link instagram" href="" aria-label="Instagram">
+                  <svg>
+                    <use></use>
+                  </svg>
+                </a>
               </li>
 
               <li class="social-item"><a class="link twitter" href="" aria-label="Twitter"></a></li>
