--- a/images/moon-2/demo-external-svg.html
+++ b/images/moon-2/demo-external-svg.html
@@ -17,27 +17,7 @@
         <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-Vector-2"><use xlink:href="symbol-defs.svg#icon-Vector-2"></use></svg><span class="name"> icon-Vector-2</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-Vector-3"><use xlink:href="symbol-defs.svg#icon-Vector-3"></use></svg><span class="name"> icon-Vector-3</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-Vector-4"><use xlink:href="symbol-defs.svg#icon-Vector-4"></use></svg><span class="name"> icon-Vector-4</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-Vector"><use xlink:href="symbol-defs.svg#icon-Vector"></use></svg><span class="name"> icon-Vector</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-Vector-1"><use xlink:href="symbol-defs.svg#icon-Vector-1"></use></svg><span class="name"> icon-Vector-1</span>
+                <svg class="icon icon-Frame"><use xlink:href="symbol-defs.svg#icon-Frame"></use></svg><span class="name"> icon-Frame</span>
             </div>
         </div>
   </div>
