--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
             <ul class="social-list list">
               <li class="social-item">
                 <a class="link instagram" href="" aria-label="Instagram">
-                  <svg>
-                    <use></use>
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
