--- a/index.html
+++ b/index.html
@@ -148,16 +148,26 @@
             <p class="our-team-item-text">Product Designer</p>
             <ul class="social-list list">
               <li class="social-item">
-                <a class="link instagram" href="" aria-label="Instagram">
+                <a class="link" href="" aria-label="Instagram">
                   <svg class="icon-social" width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
-
-              <li class="social-item"><a class="link twitter" href="" aria-label="Twitter"></a></li>
-              <li class="social-item"><a class="link facebook" href="" aria-label="Facebook"></a></li>
-              <li class="social-item"><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
+              <li class="social-item"><a class="link" href="" aria-label="Twitter">
+                  <svg class="icon-social" width="20" height="16.25">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a></li>
+              <li class="social-item"><a class="link" href="" aria-label="Facebook">
+                  <svg class="icon-social" width="10" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg></a></li>
+              <li class="social-item"><a class="link" href="" aria-label="LinkedIn">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a></li>
             </ul>
           </li>
           <li class="item">
@@ -166,10 +176,27 @@
             <p class="our-team-item-text">Frontend Developer</p>
 
             <ul class="social-list list">
-              <li class="social-item"><a class="link instagram" href="" aria-label="Instagram"></a></li>
-              <li class="social-item"><a class="link twitter" href="" aria-label="Twitter"></a></li>
-              <li class="social-item"><a class="link facebook" href="" aria-label="Facebook"></a></li>
-              <li class="social-item"><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
+              <li class="social-item">
+                <a class="link" href="" aria-label="Instagram">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item"><a class="link" href="" aria-label="Twitter">
+                  <svg class="icon-social" width="20" height="16.25">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a></li>
+              <li class="social-item"><a class="link" href="" aria-label="Facebook">
+                  <svg class="icon-social" width="10" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg></a></li>
+              <li class="social-item"><a class="link" href="" aria-label="LinkedIn">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a></li>
             </ul>
           </li>
           <li class="item">
@@ -177,10 +204,27 @@
             <p class="our-team-section-title">Николай Тарасов</p>
             <p class="our-team-item-text">Marketing</p>
             <ul class="social-list list">
-              <li class="social-item"><a class="link instagram" href="" aria-label="Instagram"></a></li>
-              <li class="social-item"><a class="link twitter" href="" aria-label="Twitter"></a></li>
-              <li class="social-item"><a class="link facebook" href="" aria-label="Facebook"></a></li>
-              <li class="social-item"><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
+              <li class="social-item">
+                <a class="link" href="" aria-label="Instagram">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item"><a class="link" href="" aria-label="Twitter">
+                  <svg class="icon-social" width="20" height="16.25">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a></li>
+              <li class="social-item"><a class="link" href="" aria-label="Facebook">
+                  <svg class="icon-social" width="10" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg></a></li>
+              <li class="social-item"><a class="link" href="" aria-label="LinkedIn">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a></li>
             </ul>
           </li>
           <li class="item">
@@ -188,10 +232,27 @@
             <p class="our-team-section-title">Михаил Ермаков</p>
             <p class="our-team-item-text">UI Designer</p>
             <ul class="social-list list">
-              <li class="social-item"><a class="link instagram" href="" aria-label="Instagram"></a></li>
-              <li class="social-item"><a class="link twitter" href="" aria-label="Twitter"></a></li>
-              <li class="social-item"><a class="link facebook" href="" aria-label="Facebook"></a></li>
-              <li class="social-item"><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
+              <li class="social-item">
+                <a class="link" href="" aria-label="Instagram">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item"><a class="link" href="" aria-label="Twitter">
+                  <svg class="icon-social" width="20" height="16.25">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a></li>
+              <li class="social-item"><a class="link" href="" aria-label="Facebook">
+                  <svg class="icon-social" width="10" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg></a></li>
+              <li class="social-item"><a class="link" href="" aria-label="LinkedIn">
+                  <svg class="icon-social" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a></li>
             </ul>
           </li>
         </ul>
@@ -205,9 +266,11 @@
         <h2 class="section-title">Постоянные клиенты</h2>
 
         <ul class="customers list">
-          <li class="item ya-n-co"><svg width="80" height="80">
-              <use href="./images/sprite.svg#icon-ya-n-co"></use>
-            </svg></li>
+          <li class="item ya-n-co">
+            <a class="link" href=""><svg width="44.27" height="49.23">
+                <use href="./images/sprite.svg#icon-ya-n-co"></use>
+              </svg></a>
+          </li>
           <li class="item company-tagline-here"></li>
           <li class="item company"></li>
           <li class="item foster-peters"></li>
