--- a/index.html
+++ b/index.html
@@ -266,16 +266,36 @@
         <h2 class="section-title">Постоянные клиенты</h2>
 
         <ul class="customers list">
-          <li class="item ya-n-co">
+          <li class="item">
             <a class="link" href=""><svg width="44.27" height="49.23">
-                <use href="./images/sprite.svg#icon-ya-n-co"></use>
+                <use href="./images/sprite.svg#icon-clients-logo-1"></use>
               </svg></a>
           </li>
-          <li class="item company-tagline-here"></li>
-          <li class="item company"></li>
-          <li class="item foster-peters"></li>
-          <li class="item brand"></li>
-          <li class="item company-tagline"></li>
+          <li class="item">
+            <a class="link" href=""><svg width="40" height="52">
+                <use href="./images/sprite.svg#icon-clients-logo-2"></use>
+              </svg></a>
+          </li>
+          <li class="item">
+            <a class="link" href=""><svg width="41" height="42.6">
+                <use href="./images/sprite.svg#icon-clients-logo-3"></use>
+              </svg></a>
+          </li>
+          <li class="item">
+            <a class="link" href=""><svg width="79.66" height="42.02">
+                <use href="./images/sprite.svg#icon-clients-logo-4"></use>
+              </svg></a>
+          </li>
+          <li class="item">
+            <a class="link" href=""><svg width="59" height="47">
+                <use href="./images/sprite.svg#icon-clients-logo-5"></use>
+              </svg></a>
+          </li>
+          <li class="item">
+            <a class="link" href=""><svg width="88.48" height="45.44">
+                <use href="./images/sprite.svg#icon-clients-logo-6"></use>
+              </svg></a>
+          </li>
         </ul>
       </div>
     </div>
@@ -298,12 +318,28 @@
       </div>
       <div class="social-container">
         <h3 class="title">присоединяйтесь</h3>
-        <ul class="social-list list">
-          <li class="social-item"><a class="link instagram" href="" aria-label="Instagram"></a></li>
-          <li class="social-item"><a class="link twitter" href="" aria-label="Twitter"></a></li>
-          <li class="social-item"><a class="link facebook" href="" aria-label="Facebook"></a></li>
-          <li class="social-item"><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
-        </ul>
+        <ul class="social-list list social-footer">
+          <li class="social-item">
+            <a class="link" href="" aria-label="Instagram">
+              <svg class="icon-social" width="20" height="20">
+                <use href="./images/sprite.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item"><a class="link" href="" aria-label="Twitter">
+              <svg class="icon-social" width="20" height="16.25">
+                <use href="./images/sprite.svg#icon-twitter"></use>
+              </svg>
+            </a></li>
+          <li class="social-item"><a class="link" href="" aria-label="Facebook">
+              <svg class="icon-social" width="10" height="20">
+                <use href="./images/sprite.svg#icon-facebook"></use>
+              </svg></a></li>
+          <li class="social-item"><a class="link" href="" aria-label="LinkedIn">
+              <svg class="icon-social" width="20" height="20">
+                <use href="./images/sprite.svg#icon-linkedin"></use>
+              </svg>
+            </a></li>
       </div>
 
 
