--- a/portfolio.html
+++ b/portfolio.html
@@ -34,10 +34,19 @@
                 </ul>
             </nav>
 
-
             <ul class="header-contacts list">
-                <li class="item envelope"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="item phone"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="item">
+                    <a class="link" href="mailto:info@devstudio.com">
+                        <svg class="icon" width="16" height="12">
+                            <use href="./images/sprite.svg#icon-envelope"></use>
+                        </svg>
+                        info@devstudio.com</a>
+                </li>
+
+                <li class="item"><a class="link" href="tel:+380961111111">
+                        <svg class="icon" width="10" height="16">
+                            <use href="./images/sprite.svg#icon-phone"></use>
+                        </svg>+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -167,12 +176,28 @@
             </div>
             <div class="social-container">
                 <h3 class="title">присоединяйтесь</h3>
-                <ul class="social-list list">
-                    <li class="social-item"><a class="link instagram" href="" aria-label="Instagram"></a></li>
-                    <li class="social-item"><a class="link twitter" href="" aria-label="Twitter"></a></li>
-                    <li class="social-item"><a class="link facebook" href="" aria-label="Facebook"></a></li>
-                    <li class="social-item"><a class="link linkedin" href="" aria-label="LinkedIn"></a></li>
-                </ul>
+                <ul class="social-list list social-footer">
+                    <li class="social-item">
+                        <a class="link" href="" aria-label="Instagram">
+                            <svg class="icon-social" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-item"><a class="link" href="" aria-label="Twitter">
+                            <svg class="icon-social" width="20" height="16.25">
+                                <use href="./images/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a></li>
+                    <li class="social-item"><a class="link" href="" aria-label="Facebook">
+                            <svg class="icon-social" width="10" height="20">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                            </svg></a></li>
+                    <li class="social-item"><a class="link" href="" aria-label="LinkedIn">
+                            <svg class="icon-social" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a></li>
             </div>
 
 
