--- a/portfolio.html
+++ b/portfolio.html
@@ -63,6 +63,7 @@
                 <li class="item"><button class="button portfolio-button" type="button">Маркетинг</button></li>
             </ul>
 
+            <!-- Портфолио -->
             <ul class="portfolio list">
                 <li class="item">
                     <a class="link" href="">
@@ -73,88 +74,115 @@
                                 ducimus, expedita praesentium
                                 quasi ea, eos quo. Debitis.</p>
                             <p class="title">Технокряк</p>
-                            <p class="portfolio-item-text">Веб-сайт</p>
+                            <p class="text">Веб-сайт</p>
                         </div>
                     </a>
                 </li>
-                <li class="item"><a href=""><img src="./images/portfolio/poster-new-orlean.jpg" width="370px"
-                            height="294px" alt="Постер New Orlean vs Golden Star">
-                        <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
-                            tempora
-                            vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
-                            ea,
-                            eos quo. Debitis.</p>
-                        <p class="title">Постер New Orlean vs Golden Star</p>
-                        <p>Дизайн</p>
-                    </a></li>
+                <li class="item">
+                    <a class="link" href="">
+                        <img src="./images/portfolio/poster-new-orlean.jpg" width="370px" height="294px"
+                            alt="Постер New Orlean vs Golden Star">
+                        <div class="item-border-container">
+                            <p class="paragraph">lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                                distinctio eius
+                                nobistempora vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita
+                                praesentium quasi ea,
+                                eos quo. Debitis.</p>
+                            <p class="title">Постер New Orlean vs Golden Star</p>
+                            <p class="text">Дизайн</p>
+                        </div>
+                    </a>
+                </li>
                 <li class="item"><a href=""><img src="./images/portfolio/restraunt-seafood.jpg" width="370px"
                             height="294px" alt="Ресторан Seafood">
-                        <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
-                            tempora
-                            vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
-                            ea,
-                            eos quo. Debitis.</p>
-                        <p class="title">Ресторан Seafood</p>
-                        <p>Приложение</p>
+                        <div class="item-border-container">
+                            <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                                tempora
+                                vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium
+                                quasi
+                                ea,
+                                eos quo. Debitis.</p>
+                            <p class="title">Ресторан Seafood</p>
+                            <p class="text">Приложение</p>
+                        </div>
                     </a></li>
                 <li class="item"><a href=""><img src="./images/portfolio/project-prime.jpg" width="370px" height="294px"
                             alt="Проект Prime">
-                        <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
-                            tempora
-                            vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
-                            ea,
-                            eos quo. Debitis.</p>
-                        <p class="title">Проект Prime</p>
-                        <p>Маркетинг</p>
+                        <div class="item-border-container">
+                            <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                                tempora
+                                vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium
+                                quasi
+                                ea,
+                                eos quo. Debitis.</p>
+                            <p class="title">Проект Prime</p>
+                            <p class="text">Маркетинг</p>
+                        </div>
                     </a></li>
                 <li class="item"><a href=""><img src="./images/portfolio/project-boxes.jpg" width="370px" height="294px"
                             alt="Проект Boxes">
-                        <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
-                            tempora
-                            vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
-                            ea,
-                            eos quo. Debitis.</p>
-                        <p class="title">Проект Boxes</p>
-                        <p>Приложение</p>
+                        <div class="item-border-container">
+                            <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                                tempora
+                                vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium
+                                quasi
+                                ea,
+                                eos quo. Debitis.</p>
+                            <p class="title">Проект Boxes</p>
+                            <p class="text">Приложение</p>
+                        </div>
                     </a></li>
                 <li class="item"><a href=""><img src="./images/portfolio/inspiration-has-no-borders.jpg" width="370px"
                             height="294px" alt="Inspiration has no Borders">
-                        <p>lmLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
-                            tempora
-                            vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
-                            ea,
-                            eos quo. Debitis.</p>
-                        <p class="title">Inspiration has no Borders</p>
-                        <p>Веб-сайт</p>
+                        <div class="item-border-container">
+                            <p>lmLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                                tempora
+                                vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium
+                                quasi
+                                ea,
+                                eos quo. Debitis.</p>
+                            <p class="title">Inspiration has no Borders</p>
+                            <p class="text">Веб-сайт</p>
+                        </div>
                     </a></li>
                 <li class="item"><a href=""><img src="./images/portfolio/edition-limited-edition.jpg" width="370px"
                             height="294px" alt="Издание Limited Edition">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis tempora
-                            vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
-                            ea,
-                            eos quo. Debitis.</p>
-                        <p class="title">Издание Limited Edition</p>
-                        <p>Дизайн</p>
+                        <div class="item-border-container">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                                tempora
+                                vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium
+                                quasi
+                                ea,
+                                eos quo. Debitis.</p>
+                            <p class="title">Издание Limited Edition</p>
+                            <p class="text">Дизайн</p>
+                        </div>
                     </a></li>
                 <li class="item"><a href=""><img src="./images/portfolio/project-lab.jpg" width="370px" height="294px"
                             alt="Проект LAB">
-                        <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
-                            tempora
-                            vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
-                            ea,
-                            eos quo. Debitis.</p>
-                        <p class="title">Проект LAB</p>
-                        <p>Маркетинг</p>
+                        <div class="item-border-container">
+                            <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                                tempora
+                                vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium
+                                quasi
+                                ea,
+                                eos quo. Debitis.</p>
+                            <p class="title">Проект LAB</p>
+                            <p class="text">Маркетинг</p>
+                        </div>
                     </a></li>
                 <li class="item"><a href=""><img src="./images/portfolio/growing-business.jpg" width="370px"
                             height="294px" alt="Growing Business">
-                        <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
-                            tempora
-                            vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium quasi
-                            ea,
-                            eos quo. Debitis.</p>
-                        <p class="title">Growing Business</p>
-                        <p>Приложение</p>
+                        <div class="item-border-container">
+                            <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                                tempora
+                                vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium
+                                quasi
+                                ea,
+                                eos quo. Debitis.</p>
+                            <p class="title">Growing Business</p>
+                            <p class="text">Приложение</p>
+                        </div>
                     </a></li>
             </ul>
         </div>
