--- a/portfolio.html
+++ b/portfolio.html
@@ -93,23 +93,22 @@
                         </div>
                     </a>
                 </li>
-                <li class="item"><a href=""><img src="./images/portfolio/restraunt-seafood.jpg" width="370px"
+                <li class="item">
+                    <a class="link" href=""><img src="./images/portfolio/restraunt-seafood.jpg" width="370px"
                             height="294px" alt="Ресторан Seafood">
                         <div class="item-border-container">
-                            <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
-                                tempora
-                                vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium
-                                quasi
-                                ea,
-                                eos quo. Debitis.</p>
+                            <p class="paragraph">lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                                distinctio eius nobis</p>
                             <p class="title">Ресторан Seafood</p>
                             <p class="text">Приложение</p>
                         </div>
-                    </a></li>
-                <li class="item"><a href=""><img src="./images/portfolio/project-prime.jpg" width="370px" height="294px"
-                            alt="Проект Prime">
+                    </a>
+                </li>
+                <li class="item"><a class="link" href=""><img src="./images/portfolio/project-prime.jpg" width="370px"
+                            height="294px" alt="Проект Prime">
                         <div class="item-border-container">
-                            <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                            <p class="paragraph">lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                                distinctio eius nobis
                                 tempora
                                 vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium
                                 quasi
@@ -119,10 +118,11 @@
                             <p class="text">Маркетинг</p>
                         </div>
                     </a></li>
-                <li class="item"><a href=""><img src="./images/portfolio/project-boxes.jpg" width="370px" height="294px"
-                            alt="Проект Boxes">
+                <li class="item"><a class="link" href=""><img src="./images/portfolio/project-boxes.jpg" width="370px"
+                            height="294px" alt="Проект Boxes">
                         <div class="item-border-container">
-                            <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                            <p class="paragraph">lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                                distinctio eius nobis
                                 tempora
                                 vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium
                                 quasi
@@ -132,10 +132,11 @@
                             <p class="text">Приложение</p>
                         </div>
                     </a></li>
-                <li class="item"><a href=""><img src="./images/portfolio/inspiration-has-no-borders.jpg" width="370px"
-                            height="294px" alt="Inspiration has no Borders">
+                <li class="item"><a class="link" href=""><img src="./images/portfolio/inspiration-has-no-borders.jpg"
+                            width="370px" height="294px" alt="Inspiration has no Borders">
                         <div class="item-border-container">
-                            <p>lmLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                            <p class="paragraph">lmLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                                distinctio eius nobis
                                 tempora
                                 vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium
                                 quasi
@@ -145,10 +146,11 @@
                             <p class="text">Веб-сайт</p>
                         </div>
                     </a></li>
-                <li class="item"><a href=""><img src="./images/portfolio/edition-limited-edition.jpg" width="370px"
-                            height="294px" alt="Издание Limited Edition">
+                <li class="item"><a class="link" href=""><img src="./images/portfolio/edition-limited-edition.jpg"
+                            width="370px" height="294px" alt="Издание Limited Edition">
                         <div class="item-border-container">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                                distinctio eius nobis
                                 tempora
                                 vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium
                                 quasi
@@ -158,10 +160,11 @@
                             <p class="text">Дизайн</p>
                         </div>
                     </a></li>
-                <li class="item"><a href=""><img src="./images/portfolio/project-lab.jpg" width="370px" height="294px"
-                            alt="Проект LAB">
+                <li class="item"><a class="link" href=""><img src="./images/portfolio/project-lab.jpg" width="370px"
+                            height="294px" alt="Проект LAB">
                         <div class="item-border-container">
-                            <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                            <p class="paragraph">lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                                distinctio eius nobis
                                 tempora
                                 vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium
                                 quasi
@@ -171,10 +174,11 @@
                             <p class="text">Маркетинг</p>
                         </div>
                     </a></li>
-                <li class="item"><a href=""><img src="./images/portfolio/growing-business.jpg" width="370px"
-                            height="294px" alt="Growing Business">
+                <li class="item"><a class="link" href=""><img src="./images/portfolio/growing-business.jpg"
+                            width="370px" height="294px" alt="Growing Business">
                         <div class="item-border-container">
-                            <p>lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat distinctio eius nobis
+                            <p class="paragraph">lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                                distinctio eius nobis
                                 tempora
                                 vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita praesentium
                                 quasi
