--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a class="logo" href="./index.html">Web<span class="logo-black">Studio</span></a>
 
         <ul class="site-nav list">
-          <li class="item"><a class="link" href="">Студия</a></li>
+          <li class="item "><a class="link current" href="">Студия</a></li>
           <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
           <li class="item"><a class="link" href="">Контакты</a></li>
         </ul>
@@ -70,7 +70,7 @@
       <div class="container">
 
         <!-- Особенности -->
-        <h2 class="hidden section-title">Особенности</h2>
+        <h2 class="is-hidden section-title">Особенности</h2>
         <ul class="features list">
           <li class="item">
             <div class="features-image-container">
