--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,8 @@
 
 <body>
 
+
+
     <!-- Header -->
     <header class="page-header">
         <div class="container nav-container">
@@ -53,7 +55,7 @@
 
     <main>
         <div class="container section">
-            <h1 class="hidden">Наши проекты</h1>
+            <h1 class="is-hidden">Наши проекты</h1>
             <!-- Наши проекты -->
             <ul class="portfolio-buttons-list list">
                 <li class="item"><button class="button portfolio-button" type="button">Все</button></li>
@@ -67,12 +69,13 @@
             <ul class="portfolio list">
                 <li class="item">
                     <a class="link" href="">
-                        <img src="./images/portfolio/technocryak.jpg" width="370px" height="294px" alt="Технокряк">
-                        <div class="item-border-container">
-                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
-                                distinctio eius nobis tempora eum aperiam odit hic exercitationem fugit odio non
-                                ducimus, expedita praesentium
+                        <div class="text-overlay">
+                            <img src="./images/portfolio/technocryak.jpg" width="370px" height="294px" alt="Технокряк">
+                            <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing . Fugiat distinctio
+                                eius nobis tempora eum aperiam odit hic fugit odio non ducimus, expedita praesentium
                                 quasi ea, eos quo. Debitis.</p>
+                        </div>
+                        <div class="item-border-container">
                             <p class="title">Технокряк</p>
                             <p class="text">Веб-сайт</p>
                         </div>
@@ -80,33 +83,41 @@
                 </li>
                 <li class="item">
                     <a class="link" href="">
-                        <img src="./images/portfolio/poster-new-orlean.jpg" width="370px" height="294px"
-                            alt="Постер New Orlean vs Golden Star">
-                        <div class="item-border-container">
+                        <div class="text-overlay">
+                            <img src="./images/portfolio/poster-new-orlean.jpg" width="370px" height="294px"
+                                alt="Постер New Orlean vs Golden Star">
                             <p class="paragraph">lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
                                 distinctio eius
                                 nobistempora vero eum aperiam odit hic exercitationem fugit odio non ducimus, expedita
                                 praesentium quasi ea,
                                 eos quo. Debitis.</p>
+                        </div>
+                        <div class="item-border-container">
+
                             <p class="title">Постер New Orlean vs Golden Star</p>
                             <p class="text">Дизайн</p>
                         </div>
                     </a>
                 </li>
                 <li class="item">
-                    <a class="link" href=""><img src="./images/portfolio/restraunt-seafood.jpg" width="370px"
-                            height="294px" alt="Ресторан Seafood">
-                        <div class="item-border-container">
+                    <a class="link" href="">
+                        <div class="text-overlay">
+                            <img src="./images/portfolio/restraunt-seafood.jpg" width="370px" height="294px"
+                                alt="Ресторан Seafood">
                             <p class="paragraph">lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
                                 distinctio eius nobis</p>
+                        </div>
+                        <div class="item-border-container">
+
                             <p class="title">Ресторан Seafood</p>
                             <p class="text">Приложение</p>
                         </div>
                     </a>
                 </li>
-                <li class="item"><a class="link" href=""><img src="./images/portfolio/project-prime.jpg" width="370px"
-                            height="294px" alt="Проект Prime">
-                        <div class="item-border-container">
+                <li class="item"><a class="link" href="">
+                        <div class="text-overlay">
+                            <img src="./images/portfolio/project-prime.jpg" width="370px" height="294px"
+                                alt="Проект Prime">
                             <p class="paragraph">lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
                                 distinctio eius nobis
                                 tempora
@@ -114,13 +125,17 @@
                                 quasi
                                 ea,
                                 eos quo. Debitis.</p>
+                        </div>
+                        <div class="item-border-container">
+
                             <p class="title">Проект Prime</p>
                             <p class="text">Маркетинг</p>
                         </div>
                     </a></li>
-                <li class="item"><a class="link" href=""><img src="./images/portfolio/project-boxes.jpg" width="370px"
-                            height="294px" alt="Проект Boxes">
-                        <div class="item-border-container">
+                <li class="item"><a class="link" href="">
+                        <div class="text-overlay">
+                            <img src="./images/portfolio/project-boxes.jpg" width="370px" height="294px"
+                                alt="Проект Boxes">
                             <p class="paragraph">lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
                                 distinctio eius nobis
                                 tempora
@@ -128,13 +143,17 @@
                                 quasi
                                 ea,
                                 eos quo. Debitis.</p>
+                        </div>
+                        <div class="item-border-container">
+
                             <p class="title">Проект Boxes</p>
                             <p class="text">Приложение</p>
                         </div>
                     </a></li>
-                <li class="item"><a class="link" href=""><img src="./images/portfolio/inspiration-has-no-borders.jpg"
-                            width="370px" height="294px" alt="Inspiration has no Borders">
-                        <div class="item-border-container">
+                <li class="item"><a class="link" href="">
+                        <div class="text-overlay">
+                            <img src="./images/portfolio/inspiration-has-no-borders.jpg" width="370px" height="294px"
+                                alt="Inspiration has no Borders">
                             <p class="paragraph">lmLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
                                 distinctio eius nobis
                                 tempora
@@ -142,13 +161,17 @@
                                 quasi
                                 ea,
                                 eos quo. Debitis.</p>
+                        </div>
+                        <div class="item-border-container">
+
                             <p class="title">Inspiration has no Borders</p>
                             <p class="text">Веб-сайт</p>
                         </div>
                     </a></li>
-                <li class="item"><a class="link" href=""><img src="./images/portfolio/edition-limited-edition.jpg"
-                            width="370px" height="294px" alt="Издание Limited Edition">
-                        <div class="item-border-container">
+                <li class="item"><a class="link" href="">
+                        <div class="text-overlay">
+                            <img src="./images/portfolio/edition-limited-edition.jpg" width="370px" height="294px"
+                                alt="Издание Limited Edition">
                             <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
                                 distinctio eius nobis
                                 tempora
@@ -156,13 +179,16 @@
                                 quasi
                                 ea,
                                 eos quo. Debitis.</p>
+                        </div>
+                        <div class="item-border-container">
+
                             <p class="title">Издание Limited Edition</p>
                             <p class="text">Дизайн</p>
                         </div>
                     </a></li>
-                <li class="item"><a class="link" href=""><img src="./images/portfolio/project-lab.jpg" width="370px"
-                            height="294px" alt="Проект LAB">
-                        <div class="item-border-container">
+                <li class="item"><a class="link" href="">
+                        <div class="text-overlay">
+                            <img src="./images/portfolio/project-lab.jpg" width="370px" height="294px" alt="Проект LAB">
                             <p class="paragraph">lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
                                 distinctio eius nobis
                                 tempora
@@ -170,13 +196,17 @@
                                 quasi
                                 ea,
                                 eos quo. Debitis.</p>
+                        </div>
+                        <div class="item-border-container">
+
                             <p class="title">Проект LAB</p>
                             <p class="text">Маркетинг</p>
                         </div>
                     </a></li>
-                <li class="item"><a class="link" href=""><img src="./images/portfolio/growing-business.jpg"
-                            width="370px" height="294px" alt="Growing Business">
-                        <div class="item-border-container">
+                <li class="item"><a class="link" href="">
+                        <div class="text-overlay">
+                            <img src="./images/portfolio/growing-business.jpg" width="370px" height="294px"
+                                alt="Growing Business">
                             <p class="paragraph">lormLorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
                                 distinctio eius nobis
                                 tempora
@@ -184,6 +214,9 @@
                                 quasi
                                 ea,
                                 eos quo. Debitis.</p>
+                        </div>
+                        <div class="item-border-container">
+
                             <p class="title">Growing Business</p>
                             <p class="text">Приложение</p>
                         </div>
