--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
 
                 <ul class="site-nav list">
                     <li class="item"><a class="link" href="">Студия</a></li>
-                    <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="item current"><a class="link" href="./portfolio.html">Портфолио</a></li>
                     <li class="item"><a class="link" href="">Контакты</a></li>
                 </ul>
             </nav>
