--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a class="logo" href="./index.html">Web<span class="logo-black">Studio</span></a>
 
         <ul class="site-nav list">
-          <li class="item "><a class="link current" href="">Студия</a></li>
+          <li class="item "><a class="link current" href="./index.html">Студия</a></li>
           <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
           <li class="item"><a class="link" href="">Контакты</a></li>
         </ul>
@@ -55,7 +55,7 @@
 
   <!-- Герой -->
 
-  <section class="hero overlay ">
+  <section class="hero overlay">
     <div class="container">
       <h1 class="hero-title">Эффективные решения<br> для вашего бизнеса</h1>
       <button class="hero-button" type="button">Заказать услугу</button>
@@ -127,11 +127,17 @@
 
         <ul class="our-activities list">
           <li class="item"><img src="./images/what-we-doing-1.jpg" alt="создание кода с готовой блок-схемы"
-              width="370" /></li>
+              width="370" />
+            <h3 class="title">Десктопные приложения</h3>
+          </li>
           <li class="item"><img src="./images/what-we-doing-2.jpg" alt="адаптивная верстка приложений для смартфонов"
               width="370" />
+            <h3 class="title">Мобильные приложения</h3>
           </li>
-          <li class="item"><img src="./images/what-we-doing-3.jpg" alt="стилизация приложений" width="370" /></li>
+          <li class="item"><img src="./images/what-we-doing-3.jpg" alt="стилизация приложений" width="370" />
+            <h3 class="title">Дизайнерские решения</h3>
+          </li>
+
         </ul>
       </div>
     </section>
