--- a/portfolio.html
+++ b/portfolio.html
@@ -30,8 +30,8 @@
                 <a class="logo" href="./index.html">Web<span class="logo-black">Studio</span></a>
 
                 <ul class="site-nav list">
-                    <li class="item"><a class="link" href="">Студия</a></li>
-                    <li class="item current"><a class="link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="item "><a class="link" href="./index.html">Студия</a></li>
+                    <li class="item"><a class="link current" href="./portfolio.html">Портфолио</a></li>
                     <li class="item"><a class="link" href="">Контакты</a></li>
                 </ul>
             </nav>
