--- a/index.html
+++ b/index.html
@@ -58,7 +58,19 @@
   <section class="hero overlay">
     <div class="container">
       <h1 class="hero-title">Эффективные решения<br> для вашего бизнеса</h1>
-      <button class="hero-button" type="button">Заказать услугу</button>
+      <button class="hero-button" type="button" data-open-modal>Заказать услугу</button>
+
+      <!-- Модальное окно -->
+      <div class="backdrop is-hidden" data-backdrop>
+        <div class="modal">
+
+          <button class="button-close" data-close-modal>
+            <svg class="icon-close" width="11" height="11">
+              <use href="./images/sprite.svg#icon-close"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
     </div>
 
   </section>
@@ -353,6 +365,8 @@
     </div>
   </footer>
 
+
+  <script src="./modal.js"></script>
 </body>
 
 </html>
