--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
 
     <main>
         <div class="container section">
-            <h1 class="is-hidden">Наши проекты</h1>
+            <h1 class="is-hidden portfolio-title">Наши проекты</h1>
             <!-- Наши проекты -->
             <ul class="portfolio-buttons-list list">
                 <li class="item"><button class="button portfolio-button" type="button">Все</button></li>
